deploy/services/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  revisionHistoryLimit: 4
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: docker-pull
      containers:
        - name: web
          image: jensdll/image-data-hiding:web.new.latest
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/
              readOnly: true
            - name: nginx-server
              mountPath: /etc/nginx/server/
              readOnly: true
            - name: cert
              mountPath: /usr/local/certs/
              readOnly: true
          resources:
            requests:
              cpu: '80m'
              memory: '128Mi'
            limits:
              cpu: '160m'
              memory: '256Mi'
          ports:
            - containerPort: 8433
              protocol: TCP
      volumes:
        - name: nginx
          configMap:
            name: web-config
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: mime_type.conf
                path: mime_type.conf
              - key: ssl.conf
                path: ssl.conf
              - key: common_header.conf
                path: common_header.conf
        - name: nginx-server
          configMap:
            name: web-config
            items:
              - key: server.conf
                path: server.conf
        - name: cert
          secret:
            secretName: web-cert
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0004
