deploy/services/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    service: web
  ports:
    - name: web
      port: 80
      targetPort: web
      protocol: TCP
